@@ -171,3 +171,11 @@ class Logo:
 ██─█─█─█─██▄▄▄▄─███▄▄▄▄─██─▄█▀██─█▄▀─███─██─█
 ▀▀▄▄▄▀▄▄▄▀▀▄▄▄▄▄▀▀▀▄▄▄▄▄▀▄▄▄▄▄▀▄▄▄▀▀▄▄▀▄▄▄▄▀▀
             '''
+
+        if self.script == 'sipfizzer':
+            return '''
+████████████████████████████████████████████████████████
+█─▄▄▄▄█▄─▄█▄─▄▄─███▄─▄▄─█▄─██─▄█░▄▄░▄█░▄▄░▄█▄─▄▄─█▄─▄▄▀█
+█▄▄▄▄─██─███─▄▄▄████─▄████─██─███▀▄█▀██▀▄█▀██─▄█▀██─▄─▄█
+▀▄▄▄▄▄▀▄▄▄▀▄▄▄▀▀▀▀▀▄▄▄▀▀▀▀▄▄▄▄▀▀▄▄▄▄▄▀▄▄▄▄▄▀▄▄▄▄▄▀▄▄▀▄▄▀
+            '''
